--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -109,9 +109,13 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Input Handler.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Drawing\Shaders.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Authentication.hpp" />
-    <ClInclude Include="Code\Source Development Kit\Toolkits\Graphical User Interface.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CContainer.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\GUI.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Window.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IDrawable.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IWidget.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Memory Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Resource Manager.hpp" />
     <ClInclude Include="Code\Framework.hpp" />
@@ -129,9 +133,13 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Input Handler.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Authentication.cpp" />
-    <ClCompile Include="Code\Source Development Kit\Toolkits\Graphical User Interface.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CContainer.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\GUI.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Window.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IDrawable.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IWidget.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Hooking.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Memory Manager.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Resource Manager.cpp" />
@@ -146,8 +154,6 @@
     <None Include="Code\Development Environment\Assembly ON.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.inl" />
-    <None Include="Code\Source Development Kit\Application Programming Interfaces\Drawing\Drawing.inl" />
-    <None Include="Code\Source Development Kit\Toolkits\Graphical User Interface.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.inl" />
     <None Include="Code\Source Development Kit\Toolkits\Hooking.hpp" />
     <None Include="Code\Source Development Kit\Toolkits\Memory Manager.inl" />
