Added SteamX Project
will have a basic steam account manager and maybe a few other features.

--- a/Source/Launcher/Launcher.vcxproj
+++ b/Source/Launcher/Launcher.vcxproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Precompile.hpp" />
+    <ClInclude Include="Code\Launcher.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.vcxproj">
