--- a/Source/SteamX/SteamX.vcxproj.filters
+++ b/Source/SteamX/SteamX.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Code\Launcher.cpp">
+    <ClCompile Include="..\Framework\Precompile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Framework\Precompile.cpp">
+    <ClCompile Include="Code\SteamX.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,7 +26,7 @@
     <ClInclude Include="..\Framework\Precompile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Launcher.hpp">
+    <ClInclude Include="Code\SteamX.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
