--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Source/Dependencies/Include/nanosvg"]
 	path = Source/Dependencies/Include/nanosvg
 	url = https://github.com/memononen/nanosvg
+[submodule "Source/Dependencies/Include/stb"]
+	path = Source/Dependencies/Include/stb
+	url = https://github.com/nothings/stb
