--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -20,9 +20,10 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Drawing\Font Manager.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\GUI.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.cpp" />
-    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CContainer.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IWidget.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IRow.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CWindow.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Development Environment\Build Output Wrapper.hpp" />
@@ -50,9 +51,10 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Drawing\Font Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\GUI.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.hpp" />
-    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CContainer.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IWidget.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IRow.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CWindow.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IContainer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
