--- a/Source/Framework/Framework.vcxproj.filters
+++ b/Source/Framework/Framework.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IRow.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CWindow.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IContainer.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CWindowHeader.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CImage.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CVectorGraphic.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Development Environment\Build Output Wrapper.hpp" />
@@ -55,6 +58,9 @@
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IRow.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CWindow.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IContainer.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CWindowHeader.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CImage.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CVectorGraphic.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
