--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -109,6 +109,8 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Input Handler.hpp" />
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Drawing\Shaders.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Authentication.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CButton.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CCheckbox.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CGroupButton.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CImage.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CText.hpp" />
@@ -139,6 +141,8 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Filesystem.cpp" />
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Input Handler.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Authentication.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CButton.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CCheckbox.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CGroupButton.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CImage.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CText.cpp" />
