--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interfaces\Window.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\IWidget.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\GUI\CScrollbar.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Memory Manager.hpp" />
     <ClInclude Include="Code\Source Development Kit\Toolkits\Resource Manager.hpp" />
     <ClInclude Include="Code\Framework.hpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="Code\Source Development Kit\Application Programming Interfaces\Window.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IInteractable.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\IWidget.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\GUI\CScrollbar.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Hooking.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Memory Manager.cpp" />
     <ClCompile Include="Code\Source Development Kit\Toolkits\Resource Manager.cpp" />
